# lucytok

./: README.md  pyproject.toml
lucytok/: __init__.py  asciifold.py  british_american.py  compounds.py  plurals.py  porter.py  tokenizer.py
tests/: test_english.py  test_profile.py
